# MARMI

./: CMakeLists.txt  LICENSE  README.md
sources/: main.cpp
sources/generics/: gendef.h  genexcept.h  handler.h  manager.h  queue.h  resource.h  supplier.h
sources/queue/: queue.h
sources/scheduler/: task_scheduler.cpp  task_scheduler.h
sources/server/: bd_request.cpp  bd_request.h  bd_request_counter.cpp  bd_request_counter.h  bd_request_generator.cpp  bd_request_generator.h  bd_request_handler.cpp  bd_request_handler.h  echo_server.cpp  echo_server.h
sources/tests/: progress_bar.h  test_generics.h  test_queue.h  test_scheduler.h  test_server.h  tests.h
